Use PublicIP by default in example config

--- a/inventory/ucloud.example.ini
+++ b/inventory/ucloud.example.ini
@@ -12,9 +12,9 @@ max_age = 86400
 ;; General ssh options for all uhosts
 [uhost]
 ;; Use domain
-host = %(Name)s.example.com
-;; Use BGP IP
-; host = %(BgpIP)s
+; host = %(Name)s.example.com
+;; Use Public IP
+host = %(PublicIP)s
 port = 22
 user = ubuntu
 
@@ -26,9 +26,9 @@ user = ubuntu
 
 [ulb]
 ;; Use domain
-host = %(ULBName)s.example.com
-;; Use BGP IP
-; host = %(BgpIP)s
+; host = %(ULBName)s.example.com
+;; Use Public IP
+host = %(PublicIP)s
 port = 22
 user = ubuntu
 
