ULBName is renamed to Name in API response

--- a/inventory/ucloud.example.ini
+++ b/inventory/ucloud.example.ini
@@ -26,7 +26,7 @@ user = ubuntu
 
 [ulb]
 ;; Use domain
-; host = %(ULBName)s.example.com
+; host = %(Name)s.example.com
 ;; Use Public IP
 host = %(PublicIP)s
 port = 22
