--- a/inventory/ucloud.example.ini
+++ b/inventory/ucloud.example.ini
@@ -6,25 +6,24 @@ base_url = http://api.spark.ucloud.cn/
 region = cn-north-03
 
 [cache]
-path = /tmp/ansible-ucloud.cache
+path = tmp/cache/ansible-ucloud.cache
 max_age = 86400
 
 ;; General ssh options for all uhosts
 [uhost]
+group = uhosts
+tag = tag_%(Tag)s
+name = %(Name)s
 ;; Use domain
 ; host = %(Name)s.example.com
 ;; Use Public IP
 host = %(PublicIP)s
 port = 22
 user = ubuntu
-
-;; Override the options for a specific instance
-; [uhost.ops]
-; host = ops.example.com
-; port = 2222
-; user = ops
 
 [ulb]
+group = ulbs
+name = %(Name)s
 ;; Use domain
 ; host = %(Name)s.example.com
 ;; Use Public IP
@@ -32,15 +31,12 @@ host = %(PublicIP)s
 port = 22
 user = ubuntu
 
-;; Also support customize specific ulb
-; [ulb.ULBName]
-
 [ucdn]
+group = ucdns
+name = %(Domain)s
 # Use BGP IP
 host = %(Domain)s
 # Use domain
 # host = %(Name).example.com
 port = 22
 user = ubuntu
-
-; [ucdn.Domain]
